3.1
-------
*** removed bug in LRTSim that led to non-sensical results. 

3.0
-------
*** now using Rcpp
* removed terrible "browser()"-bug in extract.lmeDesign()