@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.1.0): do not edit by hand
+# Generated by roxygen2 (4.1.1): do not edit by hand
 
 export(LRTSim)
 export(RLRTSim)
@@ -6,4 +6,15 @@ export(exactLRT)
 export(exactRLRT)
 export(extract.lmeDesign)
 import(Rcpp)
+importFrom(stats,anova)
+importFrom(stats,coefficients)
+importFrom(stats,complete.cases)
+importFrom(stats,cov2cor)
+importFrom(stats,formula)
+importFrom(stats,logLik)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,quantile)
+importFrom(stats,rchisq)
 useDynLib(RLRsim)
