@@ -1,10 +1,11 @@
+#' @importFrom stats model.response
 extract.lmerModDesign <- function(m) {
-  X<-getME(m,"X")
-  Z<-as.matrix(getME(m,"Z"))
-  v <- VarCorr(m)
-  resvar <- sigma(m)^2
+  X <- lme4::getME(m,"X")
+  Z <- as.matrix(lme4::getME(m,"Z"))
+  v <- lme4::VarCorr(m)
+  resvar <- lme4::sigma(m)^2
   Sigma.l <- lapply(v,function(x) x/resvar) #Cov(b)/ Var(Error)
-  k <- getME(m,"n_rtrms") #how many grouping factors
+  k <- lme4::getME(m,"n_rtrms") #how many grouping factors
   q <- lapply(Sigma.l,NROW) #how many variance components in each grouping factor
   ## OR lapply(m@cnms,length) -- but we should have an extractor for this
   nlevel<-sapply(m@flist, function(x) length(levels(x))) #how many inner blocks in Sigma_i
